comment out a few details not working at this moment

--- a/BikeForLife.Dal/BikeForLife.Dal.csproj
+++ b/BikeForLife.Dal/BikeForLife.Dal.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <Reference Include="System.Data.SqlClient">
-      <HintPath>..\..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\system.data.sqlclient\4.5.1\ref\netcoreapp2.1\System.Data.SqlClient.dll</HintPath>
+      <HintPath>C:\Program Files\dotnet\sdk\NuGetFallbackFolder\system.data.sqlclient\4.6.0\ref\netcoreapp2.1\System.Data.SqlClient.dll</HintPath>
     </Reference>
   </ItemGroup>
 
