--- a/BikeForLife.Web/BikeForLife.Web.csproj
+++ b/BikeForLife.Web/BikeForLife.Web.csproj
@@ -14,6 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\BikeForLife.Dal\BikeForLife.Dal.csproj" />
     <ProjectReference Include="..\BikeForLife.Entities\BikeForLife.Entities.csproj" />
+    <ProjectReference Include="..\BikeForLife.Service\BikeForLife.Service.csproj" />
   </ItemGroup>
 
 </Project>
